--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,1 @@
-exportPattern("^[[:alpha:]]+")
+exportPattern("graphplot_full", "categorical_count", "plotscatter_all", "outlier_count", "missing_count")
