--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,1 @@
-exportPattern("graphplot_every", "categorical_count", "plotscatter_all", "outlier_count", "missing_count")
+exportPattern("getgraphplot_every", "categorical_count", "plotscatter_all", "outlier_count", "missing_count","multicollinearity")
